kustomizations/app/overlays/gke/apply-middleware-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: microserives-demo-frontend
spec:
  routes:
  - kind: Rule
    match: Host(`app.itinerix-project.net`)
    services:
    - name: frontend
      kind: Service
      port: 80
    middlewares:
    - name: l5d-header-middleware
  tls:
    certResolver: default
